--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,50 +3,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myapplication">
 
-    <!-- ──────── Bluetooth (classic + LE) ──────── -->
-    <!-- Pre‑API 31 permissions -->
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <!-- Runtime permissions – API 31+ -->
+    <!-- ───────── Bluetooth (Classic + LE) ───────── -->
+    <!-- Pre‑API 31 권한 -->
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
+    <!-- API 31+ Runtime 권한 -->
     <uses-permission
         android:name="android.permission.BLUETOOTH_CONNECT"
-        android:usesPermissionFlags="neverForLocation" />
+        android:usesPermissionFlags="neverForLocation"/>
     <uses-permission
         android:name="android.permission.BLUETOOTH_SCAN"
-        android:usesPermissionFlags="neverForLocation" />
-    <!-- <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" /> -->
+        android:usesPermissionFlags="neverForLocation"/>
+    <!-- 필요 시 -->
+    <!-- <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE"/> -->
 
-    <!-- ──────── Foreground service & notifications ──────── -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <!-- ───────── Foreground‑Service / 알림 ───────── -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission
+        android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <!-- Optional: declare BLE feature but keep app installable on devices without it -->
+
+    <!-- BLE 하드웨어는 “있으면 사용” -->
     <uses-feature
         android:name="android.hardware.bluetooth_le"
-        android:required="false" />
+        android:required="false"/>
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
 
-        <!-- Launcher activity MUST declare exported="true" (Android 12+) -->
+        <!-- ───── Launcher ───── -->
         <activity
-            android:name=".MainActivity"
+            android:name=".activitiy.MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <!-- 메시지 트리 / 리스트 화면 -->
+        <activity
+            android:name=".activitiy.MessageCenterActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="false"
+            android:label="Message Center"
+            android:theme="@style/Theme.Material3.DayNight.NoActionBar"/>
+
+        <!-- 부팅 후 자동 시작(선택) -->
         <receiver
             android:name=".BootReceiver"
             android:enabled="true"
@@ -55,6 +65,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
+
         <!-- SPP Foreground Service -->
         <service
             android:name=".SppServerService"
@@ -62,5 +73,4 @@
             android:exported="false"
             android:foregroundServiceType="connectedDevice" />
     </application>
-
 </manifest>
